<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="7" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|center_vertical|left"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ilanImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/ilantarihi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/displayNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|center_vertical|left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ilanyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/displayYas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|center_vertical|left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ilanfiyat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/displaySehir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|center_vertical|left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ilanaciklama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanitim"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/displayTanitim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|center_vertical|left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urlprofile"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/displayProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|center_vertical|left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ilgi"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/dsiplayIlgi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|center_vertical|left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entruman"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/displayEntruman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web" />
    </LinearLayout>
      <WebView
         android:id="@+id/webviewfriend"
         android:layout_width="263dp"
         android:layout_height="222dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:gravity="center" />

</LinearLayout>