<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="7" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|center_vertical|left"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ilanImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical|left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ilan_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" 
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/txtilannick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|center_vertical|left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/url_ilan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urlilan"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/txturlIlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|center_vertical|left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ilantarih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ilanTarih" 
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/txtilantarih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|center_vertical|left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ilanyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ilanYer" 
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/txtilanYer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|center_vertical|left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ilanfiyat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ilanfiyat" 
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/txtilanFiyat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical|left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ilanaciklama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ilanaciklama"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/txtilanAciklama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </ScrollView>

    <WebView
        android:id="@+id/webviewprof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" />

</LinearLayout>